Bug #588281 Enhanced 4G LTE Mode is not effective when the fist time we start device.
[root cause  ] Default voice subId in databases is invalid when DUT firt started and ImsServiceImpl will be null.
[changes     ] Both sims should send cavims.
[side effects] no
[self test   ] <board, Test cases summary>:9860, 1、Insert sims and start device and don't select outgoing call sim. 1、Turn on or turn off 'Enhanced 4G LTE Mode', cavims command can be sent.
[reviewers   ] zhiwei.fu,kun.tang,daxing.cao
[change_type ] feature_bugfix#503124
[tag_product ] common

Change-Id: I88db3f1bb626cce29afa3906efd6e06705ed3438